force-app/main/default/objects/Detalle_Factura__c/fields/Factura__c.field-meta.xml
<CustomField>
    <fullName>Factura__c</fullName>
    <label>Factura</label>
    <referenceTo>Factura__c</referenceTo>
    <relationshipLabel>Detalles factura</relationshipLabel>
    <relationshipName>Detalles_factura</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>