force-app/main/default/objects/Detalle_Factura__c/fields/Nombre_producto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_producto__c</fullName>
    <label>Nombre producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arroz</fullName>
            </value>
            <value>
                <fullName>Baterias AAA</fullName>
            </value>
            <value>
                <fullName>Chocolatina</fullName>
            </value>
            <value>
                <fullName>Pasta dental</fullName>
            </value>
            <value>
                <fullName>Salsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>